@@ -12,6 +12,8 @@ Older versions than 3.0 can be found at http://svn.communesplone.org/svn/commune
 
 - Added parameter MeetingConfig.usingGroups that adds the possibility to restrict access to the MeetingConfig
   to the selected groups
+- Added field MeetingItem.textCheckList useable on item templates so Managers can define what is necessary for
+  the item to be considered "complete"
 
 4.1b13 (2018-12-04)
 -------------------
